feat: add quality query endpoint
